# bevy-baked-gi

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-APACHE2  LICENSE-MIT  README.md  uncrustify.cfg
Assets/: CornellBox.glb  CornellBox.voxelgi.bincode  CornellBoxGrid.ktx2  IrradianceVolume.wgsl  IrradianceVolumePBR.wgsl  LightmappedPBR.wgsl
BlenderAddons/export-bevy-gi/: export-bevy-gi.py
Crates/bevy-baked-gi/: Cargo.toml
Crates/bevy-baked-gi/assets/: BakedGIPBR.wgsl
Crates/bevy-baked-gi/examples/: scene.rs
Crates/bevy-baked-gi/src/: irradiance_volumes.rs  lib.rs  lightmaps.rs  reflection_probes.rs
Crates/bevy-irradiance-volumes/: Cargo.toml
Crates/bevy-irradiance-volumes/examples/: cornell-box.rs  scene.rs
Crates/bevy-irradiance-volumes/src/: lib.rs
Crates/export-blender-gi/: Cargo.toml  bindgen.sh  build.rs  ibllib-wrapper.h
Crates/export-blender-gi/src/: ibllib_bindings.rs  main.rs  reflection_probes.rs
Docs/: GLTFExtras.md  IrradianceVolumes.md  UnityGLTFLightmapper.md
UnityAssets/Contrib/GLTFUtility/Materials/URP/: Standard (Metallic).shadergraph
UnityAssets/Editor/: BevyLightmapper.cs  GLTFLightmapper.cs
UnityAssets/Editor/Contrib/: SharpGLTF.Core.xml  SharpGLTF.Runtime.xml  SharpGLTF.Toolkit.xml
