[package]
name = "bevy-baked-gi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7"
bevy = "0.11"
gltf = "1"
image = "0.24"
serde = "1"
serde_json = "1"
thiserror = "1"

[dev-dependencies]
bevy_egui = "0.21"
clap = "4"
egui = "0.22"
ron = "0.8"
walkdir = "2"

[dev-dependencies.bevy-view-controls-egui]
path = "../../../bevy-view-controls-egui"
