[package]
name = "bevy-irradiance-volumes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"

[dev-dependencies]
bevy_egui = "0.21"
egui = "0.22"

[dev-dependencies.bevy-view-controls-egui]
path = "../../../bevy-view-controls-egui"
