[package]
name = "export-blender-gi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrayvec = "0.7"
bincode = "1"
blend = "0.8"
byteorder = "1"
glam = "0.24"
itertools = "0.11"

[dependencies.bevy-baked-gi]
path = "../bevy-baked-gi"

[dependencies.clap]
version = "4"
features = ["derive"]
