[package]
name = "export-blender-gi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrayvec = "0.7"
bincode = "1"
blend = "0.8"
byteorder = "1"
glam = "0.24"
pathdiff = "0.2"
ruzstd = "0.4"
serde = "1"
serde_derive = "1"
tempfile = "3"
vk2dfd = "0.1"

[dependencies.bevy]
version = "0.11"
features = ["serialize"]

[dependencies.bevy-baked-gi]
path = "../bevy-baked-gi"

[dependencies.clap]
version = "4"
features = ["derive"]

[build-dependencies]
cc = "1"
